Add twitch integration

--- a/popup.html
+++ b/popup.html
@@ -15,11 +15,13 @@
 </div>
 <div class="menu">
 	<a href="#/servers" id="nav-servers" class="entypo-target active"></a>
+	<a href="#/streams" id="nav-streams" class="entypo-flash non-active"></a>
 	<a href="#/settings" id="nav-settings" class="entypo-cog non-active"></a>
 	<a href="#/info" id="nav-info" class="entypo-info non-active"></a>
 </div>
 <div class="content tse-scrollable wrapper">
 	<div id="servers" class="active tse-content"></div>
+	<div id="streams" class="non-active">fdfd</div>
 
 	<div id="settings" class="non-active">
 		<div class="container">
@@ -58,6 +60,14 @@
 <a href="" class="entypo-play play"></a>
 </div>
 </div>
+<a class="stream-template">
+<div class="preview"></div>
+<div class="info">
+<p>Status: <span class="status"></span></p>
+<p>Streamer: <span class="streamer"></span></p>
+<p>Viewers: <span class="viewers"></span></p>
+</div>
+</a>
 <div class="players-template">
 	<div class="score"></div>
 	<table>
