Add twitch integration

--- a/popup.html
+++ b/popup.html
@@ -15,16 +15,18 @@
 </div>
 <div class="menu">
 	<a href="#/servers" id="nav-servers" class="entypo-target active"></a>
-	<a href="#/streams" id="nav-streams" class="entypo-flash non-active"></a>
+	<a href="#/streams" id="nav-streams" class="entypo-flash non-active"><div class="badge non-active"></div></a>
 	<a href="#/settings" id="nav-settings" class="entypo-cog non-active"></a>
 	<a href="#/info" id="nav-info" class="entypo-info non-active"></a>
 </div>
 <div class="content tse-scrollable wrapper">
-	<div id="servers" class="active tse-content"></div>
-	<div id="streams" class="non-active">fdfd</div>
+	<div class="tse-content"></div>
+	<div id="servers" class="non-active"></div>
+	<div id="streams" class="non-active"></div>
 
-	<div id="settings" class="non-active">
+	<div id="settings" class="active">
 		<div class="container">
+			<h4>Launch options</h4>
 			<p><label><input type="checkbox" data-key="nquake"> Use nQuake online.</label></p>
 			<p><label><input type="checkbox" data-key="copyLink"> Copy to clipboard instead of launching.</label></p>
 		</div>
@@ -38,6 +40,8 @@
 			You can reach me in #fnu on Quakenet or by <a href="mailto:manellermus@gmail.com?subject=QTV Now">email</a>.</p>
 
 			<p><h4>Changelog</h4></p>
+			<p><strong>1.2.0 - 21 Nov 13</strong><br/>
+				- Added a page dedicated to Quake streams on Twitch. If you want your stream to pop up on it just set the game to <strong>Quake</strong>.</p>
 			<p><strong>1.1.0 - 20 Nov 13</strong><br/>
 				- Added the option to copy the watch and play path instead of launching qw.</p>
 			<p><strong>1.0.2 - 19 Nov 13</strong><br/>
