--- a/popup.html
+++ b/popup.html
@@ -29,17 +29,24 @@
 			<h4>Launch options</h4>
 			<p><label><input type="checkbox" data-key="nquake"> Use nQuake online.</label></p>
 			<p><label><input type="checkbox" data-key="copyLink"> Copy to clipboard instead of launching.</label></p>
+			<h4>List</h4>
+			<p><label><input type="checkbox" data-key="hide1p"> Hide servers with one player.</label></p>
 		</div>
 	</div>
 
 	<div id="info" class="non-active">
 		<div class="container">
-			QTV Now 1.1.0 made by delete.
+			QTV Now 1.3.0 made by delete.
 
 			<p><h4>Contact</h4><br/>
 			You can reach me in #fnu on Quakenet or by <a href="mailto:manellermus@gmail.com?subject=QTV Now">email</a>.</p>
 
+			<p><h4>Thanks to</h4><br/>
+			Atrophy for supplying the api and Sassa for the idea. ^^
+
 			<p><h4>Changelog</h4></p>
+			<p><strong>1.3.0 - 16 Dec 13</strong><br/>
+				- You can now hide servers with only one player.
 			<p><strong>1.2.0 - 21 Nov 13</strong><br/>
 				- Added a page dedicated to Quake streams on Twitch. If you want your stream to pop up on it just set the game to <strong>Quake</strong>.</p>
 			<p><strong>1.1.0 - 20 Nov 13</strong><br/>
