--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,7 @@
 <div class="menu">
 	<a href="#/servers" id="nav-servers" class="entypo-target active"></a>
 	<a href="#/streams" id="nav-streams" class="entypo-flash non-active"><div class="badge non-active"></div></a>
+	<a href="#/demos" id="nav-demos" class="entypo-video non-active"></a>
 	<a href="#/settings" id="nav-settings" class="entypo-cog non-active"></a>
 	<a href="#/info" id="nav-info" class="entypo-info non-active"></a>
 </div>
@@ -23,7 +24,14 @@
 	<div class="tse-content"></div>
 	<div id="servers" class="non-active"></div>
 	<div id="streams" class="non-active"></div>
-
+	<div id="demos" class="non-active">
+		<div class="search">
+			<input type="text" id="demo-search" placeholder="Search">
+		</div>
+		<div class="demo-list">
+			
+		</div>
+	</div>
 	<div id="settings" class="active">
 		<div class="container">
 			<h4>Launch options</h4>
@@ -31,12 +39,14 @@
 			<p><label><input type="checkbox" data-key="copyLink"> Copy to clipboard instead of launching.</label></p>
 			<h4>List</h4>
 			<p><label><input type="checkbox" data-key="hide1p"> Hide servers with one player.</label></p>
+			<h4>Notices</h4>
+			<input type="text" data-key="obsNotice" size="1"> Number of observers before alerting. (0 = off)
 		</div>
 	</div>
 
 	<div id="info" class="non-active">
 		<div class="container">
-			QTV Now 1.3.0 made by delete.
+			QTV Now 1.4.0 made by delete.
 
 			<p><h4>Contact</h4><br/>
 			You can reach me in #fnu on Quakenet or by <a href="mailto:manellermus@gmail.com?subject=QTV Now">email</a>.</p>
@@ -45,6 +55,8 @@
 			Atrophy for supplying the api and Sassa for the idea. ^^
 
 			<p><h4>Changelog</h4></p>
+			<p><strong>1.4.0 - 17 Dec 13</strong><br/>
+				- Added a demo browser.
 			<p><strong>1.3.0 - 16 Dec 13</strong><br/>
 				- You can now hide servers with only one player.
 			<p><strong>1.2.0 - 21 Nov 13</strong><br/>
@@ -69,6 +81,17 @@
 <p>Status: <span class="status"></span></p>
 <a href="" class="entypo-eye watch"></a>
 <a href="" class="entypo-play play"></a>
+</div>
+</div>
+<div class="demo-template">
+<div class="levelshot"></div>
+<div class="info">
+<p>Type: <span class="type"></span></p>
+<p><span class="who"></span></p>
+<p>Map: <span class="map"></span></p>
+<p>Date: <span class="date"></span></p>
+<a href="" class="entypo-eye watch"></a>
+<a href="" class="entypo-download download"></a>
 </div>
 </div>
 <a class="stream-template">
