--- a/popup.html
+++ b/popup.html
@@ -21,7 +21,6 @@
 	<a href="#/info" id="nav-info" class="entypo-info non-active"></a>
 </div>
 <div class="content tse-scrollable wrapper">
-	<div class="tse-content"></div>
 	<div id="servers" class="non-active"></div>
 	<div id="streams" class="non-active"></div>
 	<div id="demos" class="non-active">
@@ -32,7 +31,7 @@
 			
 		</div>
 	</div>
-	<div id="settings" class="active">
+	<div id="settings" class="non-active">
 		<div class="container">
 			<h4>Launch options</h4>
 			<p><label><input type="checkbox" data-key="nquake"> Use nQuake online.</label></p>
@@ -46,7 +45,7 @@
 
 	<div id="info" class="non-active">
 		<div class="container">
-			QTV Now 1.4.0 made by delete.
+			QTV Now 1.4.3 made by delete.
 
 			<p><h4>Contact</h4><br/>
 			You can reach me in #fnu on Quakenet or by <a href="mailto:manellermus@gmail.com?subject=QTV Now">email</a>.</p>
@@ -56,18 +55,19 @@
 
 			<p><h4>Changelog</h4></p>
 			<p><strong>1.4.0 - 17 Dec 13</strong><br/>
-				- Added a demo browser.
+				* Added a demo browser.<br/>
+				* Added a notifier on X amount of observers.
 			<p><strong>1.3.0 - 16 Dec 13</strong><br/>
-				- You can now hide servers with only one player.
+				* You can now hide servers with only one player.
 			<p><strong>1.2.0 - 21 Nov 13</strong><br/>
-				- Added a page dedicated to Quake streams on Twitch. If you want your stream to pop up on it just set the game to <strong>Quake</strong>.</p>
+				* Added a page dedicated to Quake streams on Twitch. If you want your stream to pop up on it just set the game to <strong>Quake</strong>.</p>
 			<p><strong>1.1.0 - 20 Nov 13</strong><br/>
-				- Added the option to copy the watch and play path instead of launching qw.</p>
+				* Added the option to copy the watch and play path instead of launching qw.</p>
 			<p><strong>1.0.2 - 19 Nov 13</strong><br/>
-				- Removed display of undefined teams.<br/>
-				- Fixed a bug that was causing the qtv files to be downloaded twice.</p>
+				* Removed display of undefined teams.<br/>
+				* Fixed a bug that was causing the qtv files to be downloaded twice.</p>
 			<p><strong>1.0 - 19 Nov 13</strong><br/>
-				- Initial release.</p>
+				* Initial release.</p>
 		</div>
 	</div>
 
