Fix slow loading when streams are live

--- a/popup.html
+++ b/popup.html
@@ -45,7 +45,7 @@
 
 	<div id="info" class="non-active">
 		<div class="container">
-			QTV Now 1.4.3 made by delete.
+			QTV Now 1.4.4 made by delete.
 
 			<p><h4>Contact</h4><br/>
 			You can reach me in #fnu on Quakenet or by <a href="mailto:manellermus@gmail.com?subject=QTV Now">email</a>.</p>
@@ -54,20 +54,37 @@
 			Atrophy for supplying the api and Sassa for the idea. ^^
 
 			<p><h4>Changelog</h4></p>
-			<p><strong>1.4.0 - 17 Dec 13</strong><br/>
-				* Added a demo browser.<br/>
-				* Added a notifier on X amount of observers.
-			<p><strong>1.3.0 - 16 Dec 13</strong><br/>
-				* You can now hide servers with only one player.
-			<p><strong>1.2.0 - 21 Nov 13</strong><br/>
-				* Added a page dedicated to Quake streams on Twitch. If you want your stream to pop up on it just set the game to <strong>Quake</strong>.</p>
-			<p><strong>1.1.0 - 20 Nov 13</strong><br/>
-				* Added the option to copy the watch and play path instead of launching qw.</p>
-			<p><strong>1.0.2 - 19 Nov 13</strong><br/>
-				* Removed display of undefined teams.<br/>
-				* Fixed a bug that was causing the qtv files to be downloaded twice.</p>
-			<p><strong>1.0 - 19 Nov 13</strong><br/>
-				* Initial release.</p>
+			<p>
+				<strong>1.4.4 - 25 Jan 14</strong>
+				<li>Fixed an issue that was causing the popup to be slow when someone was streaming.</li>
+				<li>Fixed a bug that caused the list not to be retrieved when loading the addon for the first time.</li>
+			</p>
+			<p>
+				<strong>1.4.0 - 17 Dec 13</strong>
+				<li>Added a demo browser.</li>
+				<li>Added a notifier on X amount of observers.</li>
+			</p>
+			<p>
+				<strong>1.3.0 - 16 Dec 13</strong>
+				<li>You can now hide servers with only one player.</li>
+			</p>
+			<p>
+				<strong>1.2.0 - 21 Nov 13</strong>
+				<li>Added a page dedicated to Quake streams on Twitch. If you want your stream to pop up on it just set the game to <strong>Quake</strong>.</li>
+			</p>
+			<p>
+				<strong>1.1.0 - 20 Nov 13</strong>
+				<li>Added the option to copy the watch and play path instead of launching qw.</li>
+			</p>
+			<p>
+				<strong>1.0.2 - 19 Nov 13</strong>
+				<li>Removed display of undefined teams.</li>
+				<li>Fixed a bug that was causing the qtv files to be downloaded twice.</li>
+			</p>
+			<p>
+				<strong>1.0 - 19 Nov 13</strong><br/>
+				<li>Initial release.</li>
+			</p>
 		</div>
 	</div>
 
