Update to reflect changes in the QTV Api.

--- a/popup.html
+++ b/popup.html
@@ -46,7 +46,7 @@
 
 	<div id="info" class="non-active">
 		<div class="container">
-			QTV Now 1.5.0 made by delete.
+			QTV Now 1.5.3 made by delete.
 
 			<p><h4>Contact</h4><br/>
 			You can reach me in #fnu on Quakenet or by <a href="mailto:manellermus@gmail.com?subject=QTV Now">email</a>.</p>
@@ -55,6 +55,10 @@
 			Atrophy for supplying the api and Sassa for the idea. ^^
 
 			<p><h4>Changelog</h4></p>
+            <p>
+                <strong>1.5.3 - 7 Aug 14</strong>
+                <li>Update to reflect changes in the QTV Api.</li>
+            </p>
 			<p>
 				<strong>1.5.0 - 4 June 14</strong>
 				<li>Added an experimental ping meter. Note; this feature might not be totally accurate and it might not work on all servers. It can be turned off in the options.</li>
